Bug 1230665 - Make anonymous flex/grid items non-tabbable and non-focusable.  r=roc